Refactored profile feature group
